BB-20053: Products in carousel are not correctly aligned - Fix alignment of products carusel

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/slick.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/slick.scss
@@ -1,3 +1,5 @@
+/* @theme: blank; */
+
 .slick-slider.no-transform .slick-track,
 .slick-slider.no-transform .slick-list { // transform in slick-slider breaks dropdowns
     -webkit-transform: none;
@@ -5,4 +7,9 @@
     -ms-transform: none;
     -o-transform: none;
     transform: none;
+}
+
+.slick-track {
+    margin-left: 0;
+    margin-right: 0;
 }
